<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
	<TextView  
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/seekbar1_label"
	    />
	<SeekBar
		android:id="@+id/SeekBar1"
		android:layout_width="fill_parent"
		android:max="1000"
		android:progress="500"
		android:layout_height="30dp"/>
	<TextView  
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/seekbar2_label"
	    />
    <SeekBar
        android:id="@+id/SeekBar2"
        android:layout_width="fill_parent"
        android:max="1000"
        android:progress="500" android:layout_height="30dp"/>
	<TextView  
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/seekbar3_label"
	    />
    <SeekBar
        android:id="@+id/SeekBar3"
        android:layout_width="fill_parent"
        android:max="1000"
        android:progress="500" android:layout_height="30dp"/>
	<TextView  
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/seekbar4_label"
	    />
    <SeekBar
        android:id="@+id/SeekBar4"
        android:layout_width="fill_parent"
        android:max="1000"
        android:progress="500" android:layout_height="30dp"/>
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:paddingTop="20px">
		<TextView
			android:text="@string/analog1_label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingRight="5px"
			/>
		<TextView
			android:id="@+id/TextView1"
			android:text="0"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			/>
		<TextView
			android:text="@string/analog2_label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingRight="5px"
			/>			
		<TextView
			android:id="@+id/TextView2"
			android:text="0"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			/>
		<TextView
			android:text="@string/analog3_label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingRight="5px"
			/>			
		<TextView
			android:id="@+id/TextView3"
			android:text="0"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			/>
	</LinearLayout>

	<ToggleButton
		android:id="@+id/ToggleButton1"
		android:layout_gravity="center_horizontal"
		android:layout_margin="5px"
		android:textOff="~~~~0~~~~"
		android:textOn="~~~~1~~~~"
		android:layout_width="fill_parent" android:layout_height="40dp"/>
	<ToggleButton
		android:id="@+id/ToggleButton2"
		android:layout_gravity="center_horizontal"
		android:layout_margin="5px"
		android:textOff="~~~~0~~~~"
		android:textOn="~~~~1~~~~"
		android:layout_width="fill_parent" android:layout_height="40dp"/>

	<ImageView android:layout_height="wrap_content" android:id="@+id/imageView1" android:layout_width="wrap_content" android:src="@drawable/seek"></ImageView>
</LinearLayout>
